--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
         </div>
         <footer class="footer">
             <h3>Goal</h3>
+
             <hr class="color">
             <div class="link">
                 <a href="http://">contact us</a>
@@ -174,6 +175,14 @@
                 <a href="http://">Privacy setting</a>
                 <a href="http://">Goal app</a>
                 <a href="http://">Goal Live</a>
+                <h4 class="socile">
+                    <i class="fa fa-brands fa-whatsapp">
+
+                    </i>
+                    <i class="fa fa-brands fa-github"></i>
+                    <i class="fa fa-brands fa-linkedin"></i>
+                    <i class="fa fa-brands fa-facebook-square"></i>
+                </h4>
             </div>
         </footer>
     </div>
