--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <form action="#">
                 <div class="btnfield">
                     <h6 class="hover"><a href="upcoming-match.html">Upcoming Match</a></h6>
-                    <h6 class="hover"><a href="http://">All Group</a></h6>
+                    <h6 class="hover"><a href="fifa.html">All Group</a></h6>
                     <h6 class="hover"><a href="index.html">Blog</a></h6>
                 </div>
             </form>
