--- a/fifa.html
+++ b/fifa.html
@@ -21,10 +21,21 @@
         border: 1px solid black;
         border-radius: 15px;
     }
+
+    .container img {
+        height: 50%;
+        padding-left: 325px;
+    }
+
+    .ab img {
+        height: 50%;
+        width: 80%;
+    }
 </style>
 
 <body>
     <div class="container">
+        <img src="world-cup-main/assets/hqdefault.jpg" alt="" srcset="">
         <h1>The most prestigious tournament in the world.
             Taking place quadrennially, the FIFA Men's World Cup™ sees 32 nations compete against each other for the
             prize. With continental qualification pathways leading to an exciting finals event, it brings fans together
@@ -40,6 +51,96 @@
         <h3>Where is the 2022 FIFA World Cup?
             Qatar is scheduled to host FIFA World Cup 2022™. It will be the first World Cup held in the Middle East and
             just the second to be staged in Asia.</h3>
+        <p>
+            <img class="ab" src="world-cup-main/assets/download (2).jfif" alt="" srcset="">
+            Match Date Fixtures Time Venue
+            1 November 21 Qatar vs Ecuador 3.30 pm Al Bayt Stadium
+            3 November 21 Senegal vs Netherlands 9:30 pm Khalifa International Stadium
+            2 November 21 England vs Iran 6:30 pm Al Thumama Stadium
+            4 November 22 USA vs Wales 00:30 am Al Rayyan Stadium
+            8 November 23 Argentina vs Saudi Arabia 00:30 am Lusail Stadium
+            7 November 22 Mexico vs Poland 9:30 pm Ras Abu Aboud Stadium
+            6 November 22 France vs Australia 6:30 pm Education City Stadium
+            5 November 22 Denmark vs Tunisia 3:30 pm Al Janoub Stadium
+            12 November 23 Spain vs Costa Rica 3.30 pm Al Bayt Stadium
+            11 November 23 Germany vs Japan 9:30 pm Khalifa International Stadium
+            10 November 23 Belgium vs Canada 6:30 pm Al Thumama Stadium
+            9 November 24 Morocco vs Croatia 00:30 am Al Rayyan Stadium
+            16 November 25 Brazil vs Serbia 00:30 am Lusail Stadium
+            15 November 24 Switzerland vs Cameroon 9:30 pm Ras Abu Aboud Stadium
+            14 November 24 Portugal vs Ghana 6:30 pm Education City Stadium
+            13 November 24 Uruguay vs South Korea 3.30 pm Al Janoub Stadium
+            20 November 25 England vs USA 3.30 pm Al Bayt Stadium
+            19 November 25 Wales vs Iran 9:30 pm Khalifa International Stadium
+            18 November 25 Qatar vs Senegal 6:30 pm Al Thumama Stadium
+            17 November 26 Netherlands vs Ecuador 00:30 am Al Rayyan Stadium
+            24 November 27 France vs Denmark 00:30 am Lusail Stadium
+            23 November 26 Tunisia vs Australia 9:30 pm Ras Abu Aboud Stadium
+            22 November 26 Argentina vs Mexico 6:30 pm Education City Stadium
+            21 November 26 Poland vs Saudi Arabia 3.30 pm Al Janoub Stadium
+            28 November 27 Belgium vs Morocco 3.30 pm Al Bayt Stadium
+            27 November 27 Croatia vs Canada 9:30 pm Khalifa International Stadium
+            26 November 27 Spain vs Germany 6:30 pm Al Thumama Stadium
+            25 November 28 Japan vs Costa Rica 00:30 am Al Rayyan Stadium
+            32 November 29 Portugal vs Uruguay 00:30 am Lusail Stadium
+            31 November 28 South Korea vs Ghana 9:30 pm Ras Abu Aboud Stadium
+            30 November 28 Brazil vs Switzerland 6:30 pm Education City Stadium
+            29 November 28 Cameroon vs Serbia 3.30 pm Al Janoub Stadium
+            36 November 29 Netherlands vs Qatar 3.30 pm Al Bayt Stadium
+            35 November 29 Ecuador vs Senegal 9:30 pm Khalifa International Stadium
+            34 November 29 Wales vs England 6:30 pm Al Thumama Stadium
+            33 November 30 Iran vs USA 00:30 am Al Rayyan Stadium
+            40 December 1 Poland vs Argentina 00:30 am Lusail Stadium
+            39 November 30 Saudi Arabia vs Mexico 9:30 pm Ras Abu Aboud Stadium
+            38 November 30 Tunisia vs France 6:30 pm Education City Stadium
+            37 November 30 Australia vs Denmark 3.30 pm Al Janoub Stadium
+            44 December 1 Japan vs Spain 3.30 pm Al Bayt Stadium
+            43 December 1 Costa Rica vs Germany 9:30 pm Khalifa International Stadium
+            42 December 1 Croatia vs Belgium 6:30 pm Al Thumama Stadium
+            41 December 2 Canada vs Morocco 00:30 am Al Rayyan Stadium
+            48 December 3 Cameroon vs Brazil 00:30 am Lusail Stadium
+            47 December 2 Serbia vs Switzerland 9:30 pm Ras Abu Aboud Stadium
+            46 December 2 South Korea vs Portugal 6:30 pm Education City Stadium
+            45 December 2 Ghana vs Uruguay 3.30 pm Al Janoub Stadium
+            ROUND-OF-16
+
+            49 December 3 1A vs 2B 8:30 pm Khalifa International Stadium
+            50 December 4 1C vs 2D 00:30 am Al Rayyan Stadium
+            51 December 5 1B vs 2A 00:30 am Al Bayt Stadium
+            52 December 4 1D vs 2C 8:30 pm Al Thumama Stadium
+            54 December 6 1G vs 2H 00:30 am Ras Abu Aboud Stadium
+            53 December 5 1E vs 2F 8:30 pm Al Janoub Stadium
+            56 December 7 1H vs 2G 00:30 am Lusail Stadium
+            55 December 6 1F vs 2E 8:30 pm Education City Stadium
+            QUARTERFINALS
+
+            57 December 10
+            W49 vs W50
+
+            00:30 am Lusail Stadium
+            58 December 9
+            W53 vs W54
+
+            8:30 pm Education City Stadium
+            59 December 11
+            W51 vs W52
+
+            00:30 am Al Bayt Stadium
+            60 December 10
+            W55 vs W56
+
+            8:30 pm Al Thumama Stadium
+            SEMIFINALS
+
+            61 December 14 W57 vs W58 00:30 am Lusail Stadium
+            62 December 15 W59 vs W60 00:30 am Al Bayt Stadium
+            THIRD PLACE MATCH
+
+            63 December 17 L61 vs L62 8:30 pm Khalifa International Stadium
+            FINAL
+
+            64 December 18 W61 vs W62 8:30 pm Lusail Stadium
+        </p>
     </div>
 
 
