--- a/fifa.html
+++ b/fifa.html
@@ -20,6 +20,7 @@
         background-color: rgb(214, 138, 138);
         border: 1px solid black;
         border-radius: 15px;
+        padding: 40px;
     }
 
     .container img {
