--- a/upcoming-match.html
+++ b/upcoming-match.html
@@ -162,6 +162,14 @@
                 <a href="http://">Privacy setting</a>
                 <a href="http://">Goal app</a>
                 <a href="http://">Goal Live</a>
+                <h4 class="socile">
+                    <i class="fa fa-brands fa-whatsapp">
+
+                    </i>
+                    <i class="fa fa-brands fa-github"></i>
+                    <i class="fa fa-brands fa-linkedin"></i>
+                    <i class="fa fa-brands fa-facebook-square"></i>
+                </h4>
             </div>
 
 
